tests/ui/generics/type-args-on-module-in-bound.stderr
error[E0109]: type arguments are not allowed on module `marker`
  --> $DIR/issue-22706.rs:1:29
   |
LL | fn is_copy<T: ::std::marker<i32>::Copy>() {}
   |                      ------ ^^^ type argument not allowed
   |                      |
   |                      not allowed on module `marker`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0109`.
